prevent debug_log table wrapping

--- a/core/src/record_data/debug_log/debug_log.css
+++ b/core/src/record_data/debug_log/debug_log.css
@@ -1,5 +1,9 @@
 body {
     background-color: linen;
+    overflow: scroll;
+}
+th, td {
+    white-space: nowrap;
 }
 .field_list_entry {
     vertical-align: top;
